--- a/findly-builder/src/app/components/add-source/add-source.component.scss
+++ b/findly-builder/src/app/components/add-source/add-source.component.scss
@@ -719,3 +719,14 @@
     border: none;
     margin-left: 10%;
 }
+.alw-list{
+    background: #FFFFFF;
+    border: 1px solid #E4E5E7;
+    box-sizing: border-box;
+    border-radius: 4px;
+    width: 800px;
+    margin-bottom: 1%;
+    height: 50px;
+    padding: 0.90rem;
+   
+}
