--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -303,18 +303,21 @@
 
                 <div class="header-sec row m-0 content">
                   <div class="col-10 link-name p-0 config-txt" >Schedule</div>
-                  <div class="col-2 link-name p-0" >
-                    <div class="custom-control custom-switch">
-                      <input type="checkbox" class="custom-control-input" id="customSwitches">
-                    </div>
-                  </div>
+                    <label class="kr-sg-toggle">
+                      <input type="checkbox" name = "scheduleOpts" checked>
+                      <div class="slider"></div>
+                  </label>
                 </div>
                 <div class="header-sec row m-0 content">
                   <div class="col-10 link-name p-0 config-txt" >Crwal Everything</div>
-                  <div class="col-2 link-name p-0" >
-                    <input type="checkbox" class="custom-control-input" id="customSwitches">
-                  </div>
+                  <label class="kr-sg-toggle">
+                    <input type="checkbox" name = "scheduleOpts" checked>
+                    <div class="slider"></div>
+                </label>
                 </div>
+                <!--  -->
+
+                <!--  -->
                 <div class = "config-title">Allow List</div>
                 <div class = "alw-url">
                   <div class="row">
