--- a/findly-builder/src/app/components/content-source/content-source.component.scss
+++ b/findly-builder/src/app/components/content-source/content-source.component.scss
@@ -545,7 +545,7 @@
     }
 
     .hide {
-        display: block !important;
+        display: none !important;
     }
     .paginations-custon.numbers:first{
         color: #0D6EFD !important;
