Updated section title styles and description font size change

--- a/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
+++ b/findly-builder/src/app/components/ml-threshold/ml-threshold.component.html
@@ -32,7 +32,7 @@
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
                 </label>
         </div>
-        <h2 class="headerTitle">Machine Learning</h2>
+        <h2 class="subSection">Machine Learning</h2>
 
         <div class="sliderContainer">
             <div class="label">NER Model </div>
@@ -71,7 +71,7 @@
                     <div class="slider"> <span class="no">No</span><span class="yes">Yes</span></div>
                 </label>
         </div>
-        <h5 class="subSection">NLP Settings</h5>
+        <h2 class="subSection">NLP Settings</h2>
         <div class="sliderContainer">
             <div class="label">Embeddings</div>
             <div class="info">On Selection of Custom we should show a browse button to upload</div>
@@ -104,7 +104,7 @@
             </div>
         </div>
     
-        <h5 class="subSection">Classification Settings</h5>
+        <h2 class="subSection">Classification Settings</h2>
 
         <div class="sliderContainer">
             <div class="label">n-gram Sequence Length</div>
