--- a/findly-builder/src/app/components/ml-threshold/ml-threshold.component.scss
+++ b/findly-builder/src/app/components/ml-threshold/ml-threshold.component.scss
@@ -18,6 +18,7 @@
             font-weight: bold;
             font-size: 16px;
             // margin-top: 30px;
+            border-bottom: 1px solid #E4E5E7;
         }
         .toggleContainer{
             &.paddinTop-30{
@@ -31,7 +32,7 @@
             .info{
                 color: #5F6368;
                 font-weight: normal;
-                font-size: 12px;
+                font-size: 13px;
                 margin-bottom: 8px;
             }
             .kr-sg-toggle input:checked + .slider {
@@ -49,7 +50,7 @@
             .info{
                 color: #5F6368;
                 font-weight: normal;
-                font-size: 12px;
+                font-size: 13px;
                 margin-bottom: 8px;
             }
             .kr-sg-radiobutton .radio-custom:checked + .radio-custom-label::before {
