--- a/findly-builder/src/app/components/results-rules/results-rules.component.html
+++ b/findly-builder/src/app/components/results-rules/results-rules.component.html
@@ -1,66 +1,62 @@
 <ng-template #ruleContainer let-rulesObj='rulesObj' let-rulesSet="rulesSet" let-rule='rule' let-ruleIndex='ruleIndex'  let-validationMode='validationMode'>
-    <div [ngClass]="{'validation-rules-add-edit row m-0 mt-1 mb-1 w-100 col-12': (validationMode==='simple')}">        
-        <div [ngClass]="{'drop-down-sec w-100 col-12 row m-0 p-0':(validationMode==='simple'), 'd-flex mt-mb-11 w-100 rules-selection align-items-center':(validationMode==='advanced')}" class="drop-down-sec w-100 col-12 row m-0 p-0">
-            <span class="info-rule if">If</span>
-            <div *ngIf="validationMode==='simple'" class="close-minus-btn" (click)="removeSimpleRule(rulesSet,ruleIndex)"><span>-</span></div>
-            <div *ngIf="validationMode==='advanced'" class="close-minus-btn" (click)="removeAdvancedRule(ruleIndex,rulesSet,rule)"><span>-</span></div>
-            <div class="col-3">   
-              <div class="kr-sg-dropdowns">                                        
-                <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.contextType?rule.contextType:'Choose'}}</button>                                            
-                    <ul class="dropdown-menu content-menu">
-                      <li (click)='updatedContextType(rule, conType)' *ngFor="let conType of listContextTypes"><a>{{conType}}</a></li>
-                    </ul>
-                  </div>
-              </div>
-            </div>
-            <div class="col-3">   
-              <div class="kr-sg-dropdowns">                                        
-                <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.contextCategory?rule.contextCategory:'Choose'}}</button>                                            
-                    <ul class="dropdown-menu content-menu">
-                      <li *ngFor="let contCate of dispContextCategories" (click)='updateContextCategory(rule, contCate)'>
-                        <a>{{contCate}}</a>
-                      </li>
-                    </ul>
-                  </div>
-              </div>
-            </div>
-            <div class="col-3">      
-              <div class="kr-sg-dropdowns">                                        
-                <div class="dropdown dropdown-open">
-                    <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.operator?rule.operator:'Choose'}}</button>                                            
-                    <ul class="dropdown-menu content-menu">
-                      <li (click)="rule.operator='Starts With'"><a>Starts With</a></li>
-                      <li (click)="rule.operator='Contains'"><a>Contains</a></li>
-                      <li (click)="rule.operator='Equals to'"><a>Equals to</a></li>
-                    </ul>
-                  </div>
-              </div>
-            </div>
-            <div class="col-3">                        
-              <app-group-input  [customEmitter]='true' (emitValues)="addedGroupToRule($event,rule,'if')"></app-group-input>
-            </div>
-        </div>        
+  <div class="drop-down-sec w-100 col-12 row m-0 pr-0">
+    <span class="info-rule if" *ngIf="!ruleIndex">If</span>
+    <div *ngIf="validationMode==='simple'" class="close-minus-btn" (click)="removeSimpleRule(rulesSet,ruleIndex)"><span></span></div>
+    <div *ngIf="validationMode==='advanced'" class="close-minus-btn" (click)="removeAdvancedRule(ruleIndex,rulesSet,rule)"><span></span></div>
+    <div class="col-3 add-ruleinputs">   
+      <div class="kr-sg-dropdowns">                                        
+        <div class="dropdown dropdown-open">
+            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.contextType?rule.contextType:'Choose'}}</button>                                            
+            <ul class="dropdown-menu content-menu">
+              <li (click)='updatedContextType(rule, conType)' *ngFor="let conType of listContextTypes"><a>{{conType}}</a></li>
+            </ul>
+          </div>
+      </div>
     </div>
+    <div class="col-3 add-ruleinputs">   
+      <div class="kr-sg-dropdowns">                                        
+        <div class="dropdown dropdown-open">
+            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.contextCategory?rule.contextCategory:'Choose'}}</button>                                            
+            <ul class="dropdown-menu content-menu">
+              <li *ngFor="let contCate of dispContextCategories" (click)='updateContextCategory(rule, contCate)'>
+                <a>{{contCate}}</a>
+              </li>
+            </ul>
+          </div>
+      </div>
+    </div>
+    <div class="col-3 add-ruleinputs">      
+      <div class="kr-sg-dropdowns">                                        
+        <div class="dropdown dropdown-open">
+            <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rule.operator?rule.operator:'Choose'}}</button>                                            
+            <ul class="dropdown-menu content-menu">
+              <li (click)="rule.operator='Starts With'"><a>Starts With</a></li>
+              <li (click)="rule.operator='Contains'"><a>Contains</a></li>
+              <li (click)="rule.operator='Equals to'"><a>Equals to</a></li>
+            </ul>
+          </div>
+      </div>
+    </div>
+    <div class="col-3 add-ruleinputs pr-0">                        
+      <app-group-input  [customEmitter]='true' (emitValues)="addedGroupToRule($event,rule,'if')"></app-group-input>
+    </div>
+</div>  
     <ng-container *ngIf="validationMode==='simple'">
     <div class="rule-info" *ngIf="ruleIndex !== (rulesSet.rules.length-1)">AND</div>
     <div class="row justify-content-between align-items-center col-12 pr-0 add-rule-plus-icon" *ngIf="ruleIndex === (rulesSet.rules.length-1)">
-        <div class="close-minus-btn add-plus" (click)="addSimpleRule(rulesSet,'simple')"><span>+</span></div>
+        <div class="close-minus-btn add-plus" (click)="addSimpleRule(rulesSet,'simple')"><span><img src="assets/icons/plus-white.svg"></span></div>
     </div>
-    <div class="error-message-text-box w-100 mb-2 col-12 row m-0" *ngIf="ruleIndex === (rulesSet.rules.length-1)">
+    <div class="error-message-text-box w-100 row m-0" *ngIf="ruleIndex === (rulesSet.rules.length-1)">
         <span class="info-rule">then</span>
-        <div class="kr-sg-dropdowns col-3">          
-          <div class="kr-sg-dropdowns">                                        
-            <div class="dropdown dropdown-open">
-                <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rulesObjOO.then.resultCategory?rulesObjOO.then.resultCategory:'Choose'}}</button>                                            
-                <ul class="dropdown-menu content-menu">
-                  <li (click)='updateResCat(rulesObjOO, resCat)' *ngFor="let resCat of listResultsCategories"><a>{{resCat}}</a></li>
-                </ul>
-              </div>
-          </div>
+        <div class="kr-sg-dropdowns add-ruleinputs col-3">                                        
+          <div class="dropdown dropdown-open">
+              <button class="dropdown-toggle dropdown-input" data-toggle="dropdown">{{rulesObjOO.then.resultCategory?rulesObjOO.then.resultCategory:'Choose'}}</button>                                            
+              <ul class="dropdown-menu content-menu">
+                <li (click)='updateResCat(rulesObjOO, resCat)' *ngFor="let resCat of listResultsCategories"><a>{{resCat}}</a></li>
+              </ul>
+            </div>
         </div>
-        <div class="kr-sg-input-text col-9">
+        <div class="kr-sg-input-text col-7 add-ruleinputs">
             <app-group-input [customEmitter]='true' (emitValues)="addedGroupToRule($event,rule,'then')"></app-group-input>           
         </div>     
     </div>
@@ -74,7 +70,7 @@
           <div (click)='selectTab("rules")' class="tab-name" [ngClass]="{'active': selectedTab==='rules'}">Rules</div>
           <div  (click)='selectTab("signals")' class="tab-name" [ngClass]="{'active': selectedTab==='signals'}">Signals</div>
         </div>
-        <div class="header-sec">
+        <div class="header-sec" *ngIf="selectedRulesOnj && rules && rules.length && !loadingRules">
             <div class="kr-sg-input-search">                               
                 <input type="text" placeholder="Search" class="input-search" id="searchFaqs" name='faqsSearch' [(ngModel)]="searchBlock">
                 <img src="assets/icons/search-gray.svg" class="search-icon">
@@ -106,8 +102,11 @@
     <div *ngIf="loadingRules" class="p-5 text-center">
       Lading....
     </div>
-    <div *ngIf="!(rules && rules.length) && !loadingRules" class="p-5 text-center">
-      No rules added yet
+    <div class="empty-questions-selected" *ngIf="!(rules && rules.length) && !loadingRules">
+        <img src="assets/images/icons/empty_ill.svg">
+        <div class="heading">No rules added yet</div>
+        <!-- <div class="desc">Please add rules</div> -->
+        <button class="kr-sg-button-secondary btn_lg" (click)="addEditRules()">Add</button>
     </div>
     <div *ngIf="tabsList[0].isSelected && !(draftRules && draftRules.length) && !loadingRules" class="p-5 text-center">
       No Draft rules
@@ -121,28 +120,32 @@
    </ng-container>
  </div>
 
-<kr-modal modalType="center" modalClass="addRulesModalComponent" #addRulesModalPop>
-    <div class="modal-header">
-        <div class="header-title" (click)='closeAddRulesModal()'><img src="assets/images/closeCross.png" class="closeCross closeRules pr-2"> <span class="">Add Rules</span></div>        
-    </div>
-    <div class="modal-body">
-    <div class="col-12 pl-5 pr-0" *ngIf="validationRules && validationRules.rules && validationRules.rules.length">
-        <ng-container *ngFor="let simpleRule of validationRules.rules; index as parentIndex">
-            <div class="kr-sg-input-text mb-3 rule-name-input">
-                <input type="text" placeholder="" class="input-text" [(ngModel)]='name.na'>
-            </div>
-            <div class="validation-setting-rules" >
-                <ng-container *ngFor="let rule of simpleRule.rules; index as i">
-                    <ng-container 
-                        *ngTemplateOutlet="ruleContainer; context{$implicit: validationRules,rulesSet:simpleRule,rule:rule,ruleIndex:i,validationMode:'simple', rulesObj: validationRules.then}">
-                    </ng-container>
-                </ng-container>
-            </div>  
-        </ng-container>
-    </div>
+<kr-modal modalType="center" #addRulesModalPop modalClass="modal_popups_">
+  <div class="modal-header">   
+    <div class="title">Add Rules</div>
+    <div class="close_icon" (click)='closeAddRulesModal()'><img src="assets/icons/modal-close.svg"></div>
   </div>
-  <div class="modal-footer">                               
-    <button class="kr-sg-button-primary btn_md" (click)="saveRules()" >Ok</button>
-    <button class="kr-sg-button-secondary btn_md" data-dismiss="modal" (click)="closeAddRulesModal()">Cancel</button>
-   </div>
+  <perfect-scrollbar class="perfect-scroll-modal-body">
+    <div class="modal-body">
+        <div class="col-12 p-0" *ngIf="validationRules && validationRules.rules && validationRules.rules.length">
+          <ng-container *ngFor="let simpleRule of validationRules.rules; index as parentIndex">
+              <div class="kr-sg-input-text rule-name-input">
+                <div class="label-text">Rule Name</div>
+                  <input type="text" placeholder="Enter Rule Name" class="input-text" [(ngModel)]='name.na'>
+              </div>
+              <div class="validation-setting-rules" >
+                  <ng-container *ngFor="let rule of simpleRule.rules; index as i">
+                      <ng-container 
+                          *ngTemplateOutlet="ruleContainer; context{$implicit: validationRules,rulesSet:simpleRule,rule:rule,ruleIndex:i,validationMode:'simple', rulesObj: validationRules.then}">
+                      </ng-container>
+                  </ng-container>
+              </div>  
+          </ng-container>
+        </div>
+    </div>
+  </perfect-scrollbar> 
+  <div class="modal-footer">
+      <button class="kr-sg-button-primary btn_lg" (click)="saveRules()">Add</button>
+      <button class="kr-sg-button-secondary btn_lg" (click)='closeAddRulesModal()'>Cancel</button>
+  </div>
 </kr-modal>
