--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -1333,7 +1333,8 @@ and open the template in the editor.
         .content-menu{
             border: 0;
             border-radius: 2px;
-            box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+            // box-shadow: 0 3px 5px 0 rgba(0, 0, 0, 0.2);
+            box-shadow: 0px 10px 30px rgba(32, 33, 36, 0.3);
             width: 100%;
             padding: 0;
             margin: 0;
