--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -1128,6 +1128,7 @@ div.divBlockEmptylastChild:first-child {
             font-weight: normal;
             font-size: 14px;
             float: left;
+            font-weight: bold;
         }
         .close_icon{
             cursor: pointer;
@@ -1156,4 +1157,7 @@ div.divBlockEmptylastChild:first-child {
             margin:0 20px 0 0 !important;
         }
     }
+}
+.mat_autofocus_dropdown{
+    box-shadow: 0px 10px 30px rgba(32, 33, 36, 0.3) !important;
 }
