--- a/findly-builder/src/app/components/content-source/content-source.component.html
+++ b/findly-builder/src/app/components/content-source/content-source.component.html
@@ -68,7 +68,7 @@
               [ngClass]="{'assending': (selectedSort==='name') && isAsc,'decending':(selectedSort==='name') && !isAsc}"
               class="ml-1 sortImg"></div>
           <div class="col_ col-2 d-flex align-items-center" (click)="sortBy('type')">Type<span
-              class="selected-length-doc-web d-none">({{this.filterSystem.typefilter}})</span>
+              class="selected-length-doc-web d-none">({{filterSystem.typefilter}})</span>
             <div class="kr-sg-dropdowns type_sort_dropdown" #sourceFilter="ngbDropdown" ngbDropdown [container]="'body'"
               [autoClose]="true" [placement]="'bottom-right'">
               <div class="dropdown dropdown-open">
@@ -77,9 +77,9 @@
                     [ngClass]="{'assending': (selectedSort==='type') && isAsc,'decending':(selectedSort==='type') && !isAsc}"
                     class="ml-1 sortImg"></button>
                 <ul class="dropdown-menu content-menu type_sort_dropdown-content" ngbDropdownMenu>
-                  <li (click)="sourceFilter.close();filterTable('all','type')"><span class="list-name" >All</span><img [ngClass]="{'hide': filterSystem.typefilter === 'all'}" src="assets/icons/check-blue.svg"></li>
+                  <li (click)="sourceFilter.close();filterTable('all','type')"><span class="list-name" >All</span><img [ngClass]="{'hide': filterSystem.typefilter !== 'all'}" src="assets/icons/check-blue.svg"></li>
                   <li  *ngFor="let docType of docTypeArr" (click)="sourceFilter.close();filterTable(docType,'type')">
-                    <span class="list-name">{{docType == 'webdomain' ? 'Web' :(docType == 'document'? 'Doc': '')}}</span><img [ngClass]="{'hide': filterSystem.typefilter === docType}"  src="assets/icons/check-blue.svg"></li>
+                    <span class="list-name">{{docType == 'webdomain' ? 'Web' :(docType == 'document'? 'Doc': '')}}</span><img [ngClass]="{'hide': filterSystem.typefilter !== docType}"  src="assets/icons/check-blue.svg"></li>
                 </ul>
               </div>
             </div>
