--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -547,6 +547,7 @@
                                     }
                                 }
                                 .img-view-mode{
+                                    padding: 10px 0 20px 0;
                                     img{
                                         border-radius: 10px;
                                         width: 100%;
